Wiki: use java.net.http package introduced in Java 11. This removes support for connection timeouts, it is trivial to use setHttpClient() and set your own timeout. The default remains at 30 seconds.